* Fix doppelganger being limited to be in a single room.
* Fix bat AI, damage value, and incorrect collision after death.
* Fix regeneration for pickups with OCB 128.
* Fix raising blocks still shaking without OCB.
* Fix spiky ceiling and add new OCBs for it.
* Fix TR1 winged mutant pathfinding and damage issues and add new OCB for it.
* Implement separate audio track channel for playing voiceovers with subtitles.
* Don't stop ambience when Lara dies.
* Pause all sounds when entering inventory or pause menu.
* Improve deflection against slopes.
* Move and rotate Lara and activated pickups together with dynamic bridge objects.
* Add multiple doppelgangers by using the same OCB for the origin nullmesh and doppelganger.
* Add TR1 skateboard kid.
* Add TR1 Kold.

Lua API changes:
* Add soundtrack functions:
  - Misc::GetAudioTrackLoudness() for getting current loudness of a given track type.
  - Misc::IsAudioTrackPlaying() for checking if a given track type is playing.
  - Misc::GetCurrentSubtitle() for getting current subtitle string for the voice track.

Version 1.0.9
=============

* Fix cold bar triggered in non-water rooms.
* Fix spiky wall speed value and change it via OCB number or Lua (Moveable::SetItemFlags[0]).
* Fix bats emitter crashing the game if little beetle object does not exist in wad.
* Fix gunflash rendering and position for entities.
* Fix snowmobile driver crashing the game.
* Fix knifethrower not throwing knife.
* Fix classic rollingball rolling in place into some closed doors.
* Fix zipline not working properly.
* Fix missing heavytrigger checks for node events activated from classic triggers.
* Fix death flag burning enemies underwater.
* Fix pickups and object collision not working properly in flipped rooms without portals.
* Fix footprints not being cleared after level change.
* Fix thumbstick camera option sometimes producing jerky camera movements during object interaction.