@@ -20,6 +20,7 @@ Version 1.1.0
 * Fix raising blocks still shaking without OCB.
 * Fix spiky ceiling and add new OCBs for it.
 * Fix TR1 winged mutant pathfinding and damage issues and add new OCB for it.
+* Make screenshot file in "Screenshots" subfolder by pressing print screen.
 * Implement separate audio track channel for playing voiceovers with subtitles.
 * Don't stop ambience when Lara dies.
 * Pause all sounds when entering inventory or pause menu.
